# mlops_titanic

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-api  README.md  Snakefile  docker-compose-api.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
.snakemake/metadata/: ZGF0YS9wcm9jZXNzZWQvdGVzdF9wcmVwcm9jZXNzZWQuY3N2  ZGF0YS9wcm9jZXNzZWQvdHJhaW5fcHJlcHJvY2Vzc2VkLmNzdg==  bW9kZWxzL25haXZlX2JheWVzLnBrbA==  bW9kZWxzL2RlY2lzaW9uX3RyZWUucGts  bW9kZWxzL2tubi5wa2w=  bW9kZWxzL2xvZ2lzdGljX3JlZ3Jlc3Npb24ucGts  bW9kZWxzL3BlcmNlcHRyb24ucGts  bW9kZWxzL3JhbmRvbV9mb3Jlc3QucGts  bW9kZWxzL3N2Yy5wa2w=  cmVzdWx0cy9tZXRyaWNzLnR4dA==
api/: config.yaml  main.py  send_requests.py
data/processed/: .gitignore  test_preprocessed.csv.dvc  train_preprocessed.csv.dvc
docs/: index.html  index.md
mlruns/0/: meta.yaml
mlruns/306246926076022699/: meta.yaml
mlruns/306246926076022699/011e98b7ca6f4aaab769ec6ed2d831dd/: meta.yaml
mlruns/306246926076022699/4da4724ae92c4e9f91ab417e8dd90744/: meta.yaml
mlruns/306246926076022699/93e7f2fb9565475381aa4cf68b4205c9/: meta.yaml
mlruns/306246926076022699/b16c3cbc179f4c48b1e6eb112e8c2a98/: meta.yaml
mlruns/306246926076022699/d5b415b43ab84801b49135fb2ae55e7d/: meta.yaml
mlruns/306246926076022699/dad7d75d68d6466c8b9b8e5a500da4e7/: meta.yaml
mlruns/306246926076022699/ebb9b8276501482da6f1abe7f4ea2b32/: meta.yaml
mlruns/330894543859043736/: meta.yaml
mlruns/330894543859043736/00bb52fa2cc245b49d3fc0702998d7b5/: meta.yaml
mlruns/330894543859043736/0aabd523f4f547a994a1e0a7daccc2ad/: meta.yaml
mlruns/330894543859043736/3b065071599b42ff916028bef8674ad3/: meta.yaml
mlruns/330894543859043736/3cc220a3a16549d6af4e8d335136f93e/: meta.yaml
mlruns/330894543859043736/44d4f47f2dd6408cba7ecefd8e88b367/: meta.yaml
mlruns/330894543859043736/46c0397329f34a2a9c6934beb056c14c/: meta.yaml
mlruns/330894543859043736/572c909d4e39426bbcc873d22a25bf1e/: meta.yaml
mlruns/330894543859043736/5c1b8dce5e9d4787b3b0c78dccf4b918/: meta.yaml
mlruns/330894543859043736/5cb06947b39b4f5fa1ccf2649f6b345a/: meta.yaml
models/: .gitignore  decision_tree_processed.pkl.dvc  decision_tree_raw.pkl.dvc  knn_processed.pkl.dvc  knn_raw.pkl.dvc  logistic_regression.pkl.dvc  logistic_regression_processed.pkl.dvc  logistic_regression_raw.pkl.dvc  naive_bayes_processed.pkl.dvc  naive_bayes_raw.pkl.dvc  perceptron_processed.pkl.dvc  perceptron_raw.pkl.dvc  random_forest.pkl.dvc  random_forest_processed.pkl.dvc  random_forest_raw.pkl.dvc  svc_processed.pkl.dvc  svc_raw.pkl.dvc
src/mlops_titanic/: evaluate_models.py  preprocess.py  train.py
(+97 files in other folders)
